<resources>
    <array name="spinner_city" translatable="false">
        <item>La Paz</item>
    </array>

    <string name="fb_id" translatable="false">961863003850867</string>

    <string name="label_booze_selection">New order</string>
    <string name="label_checkout">Checkout</string>

    <string name="app_name">Booze</string>
    <string name="action_sign_out">Sign out</string>

    <string name="title_messages">Messages</string>
    <string name="title_checkout">Checkout</string>
    <string name="text_total">Total:</string>

    <string name="title_thank_you">Thank you!</string>
    <string name="text_thank_you">Your order is being processed.\nYou will be notified as soon as we leave for deliver.</string>

    <string name="title_your_order">Your order</string>

    <string name="text_message_explanation">If you were provided with a wrong address or telephone number, you can send a message with your telephone number so they can contact you back.</string>

    <string name="text_price">Bs. %.2f</string>
    <string name="text_my_money">I have   Bs. </string>
    <string name="text_your_change">Your change is</string>
    <string name="text_change">Change</string>
    <string name="text_address">Address</string>
    <string name="text_status">Status:</string>
    <string name="text_description">Description</string>

    <string name="text_processing">Processing…</string>
    <string name="text_out_for_delivery">Out for delivery</string>
    <string name="text_delivered">Delivered</string>
    <string name="text_rejected">Rejected</string>
    <string name="text_waiting_for_delivery">Waiting for delivery</string>
    <string name="text_in_transit">In transit</string>

    <string name="text_street">Street</string>
    <string name="text_number">Number</string>
    <string name="text_zip_code">Zip code</string>
    <string name="text_city">City</string>
    <string name="text_telephone">Telephone number</string>
    <string name="text_message">Message</string>

    <string name="edit_label_name">Name</string>
    <string name="edit_label_email_address">Email address</string>
    <string name="edit_label_password">Password</string>

    <string name="button_find_location">Find my location</string>
    <string name="button_see_orders">See orders</string>
    <string name="button_done">I\'m done!</string>
    <string name="button_deliver_here">Deliver here</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_order_now">Order now</string>
    <string name="button_open_navigation">Open navigation</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_deliver_this_order">Deliver this order</string>
    <string name="button_delivered">Delivered!</string>
    <string name="button_sign_in_using_facebook">Sign in using Facebook</string>
    <string name="button_see_order_status">See order status</string>
    <string name="button_review_orders">Review orders</string>
    <string name="button_send_message">Send a message</string>
    <string name="button_call_client">Call</string>
    <string name="button_send">Send</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_reply">Reply</string>

    <string name="dialog_title_your_address">Your address</string>
    <string name="dialog_loading_location">Loading location, please wait…</string>
    <string name="dialog_title_deliver_confirmation">Deliver order</string>
    <string name="dialog_message_deliver_confirmation">Are you sure you want to deliver this order?\nThe client will receive a message right away.</string>
    <string name="dialog_loading_generic">Please wait…</string>
    <string name="dialog_creating_order">Creating order, please wait…</string>
    <string name="dialog_sending_message">Sending message, please wait…</string>
    <string name="dialog_title_your_contact">Your contact</string>
    <string name="dialog_title_send_message">Send message</string>
    <string name="dialog_title_delivered">Order delivered</string>
    <string name="dialog_message_delivered">Do you want to change the status of this order to \'delivered\'?\nThis action cannot be undone.</string>

    <string name="push_title_in_transit">Order update</string>
    <string name="push_message_in_transit">Your order went out for delivery!</string>
    <string name="push_title_placed">New order</string>
    <string name="push_message_placed">A new order has been placed!</string>
    <string name="push_title_message">You received a message</string>

    <string name="text_or">or</string>
    <string name="text_sign_up">Don\'t have an account? Sign up!</string>

    <string name="tab_my_orders">My orders</string>
    <string name="tab_past_orders">Past orders</string>
    <string name="tab_for_delivery">For delivery</string>
    <string name="tab_in_transit">In transit</string>
    <string name="tab_delivered">Delivered</string>

    <string name="snackbar_could_not_find_location">Could not find location</string>
    <string name="snackbar_could_not_detect_gps">Could not detect GPS location</string>
    <string name="snackbar_you_need_to_allow">You need to allow the GPS</string>
    <string name="snackbar_you_need_to_accept">You need to accept the permissions</string>
    <string name="snackbar_check_your_internet_connection">Check your internet connection</string>
    <string name="snackbar_message_sent">Message sent successfully</string>
    <string name="snackbar_email_not_found">Email address not found</string>
    <string name="snackbar_password_incorrect">Password is incorrect</string>
    <string name="snackbar_email_already_in_use">Email already in use</string>
    <string name="snackbar_order_delivered">The order has been delivered</string>

    <string name="title_activity_sign_in">BoozeApp</string>
    <string name="title_activity_thank_you">Thank You</string>
    <string name="title_activity_orders">Orders</string>
    <string name="title_activity_order">Order</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="error_text_too_short">Text too short</string>
    <string name="error_invalid_email">This email is invalid</string>
</resources>
