<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        tools:context="com.boozefy.android.SignInActivity"
        tools:showIn="@layout/activity_sign_in">

        <LinearLayout android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/booze_app"
                android:layout_gravity="center"
                android:layout_marginBottom="12dp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_label_email_address"
                android:inputType="textEmailAddress"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_label_password"
                android:inputType="textPassword"
                app:met_floatingLabel="normal"
                app:met_primaryColor="@color/colorAccent" />

            <Button android:id="@+id/button_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_in"
                style="@style/Widget.AppCompat.Button.Colored" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:text="@string/text_or"
                android:textColor="@color/colorAccent"
                style="@style/TextAppearance.AppCompat.Medium" />

            <Button android:id="@+id/button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_sign_in_using_facebook"
                android:layout_gravity="center"
                android:theme="@style/FacebookButton" />

            <TextView android:id="@+id/text_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/text_sign_up"
                android:textColor="@color/colorAccentDark"
                android:clickable="true"
                style="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>