<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boozefy.android.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_label_name"
            android:inputType="textPersonName"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_label_email_address"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/colorAccent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_label_password"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/colorAccent" />

        <Button android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            style="@style/Widget.AppCompat.Button.Colored" />

    </LinearLayout>

</LinearLayout>
